--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -640,7 +640,8 @@ sscs-cor-frontend:
       SSCS_API_URL: http://${SERVICE_NAME}-java
       TRIBUNALS_API_URL: http://${SERVICE_NAME}-java
       S2S_URL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
-      REDIS_HOST: redis://${SERVICE_NAME}-redis-master
+      REDIS_HOST: ${SERVICE_NAME}-redis-master
+      REDIS_PORT: 6379
       NODE_ENV: preview
     keyVaults:
       sscs:
