--- a/.env
+++ b/.env
@@ -69,6 +69,9 @@ export SUPERUSER_PASSWORD=password
 export CASEWORKER_USERNAME=local.test@example.com
 export CASEWORKER_PASSWORD=password
 
+export JUDGE_USERNAME=judge@example.com
+export JUDGE_PASSWORD=password
+
 export CTSC_ADMINISTRATOR_USERNAME=ctsc-administrator@hmcts.net
 export CTSC_ADMINISTRATOR_PASSWORD=password
 
