--- a/charts/sscs-tribunals-api/Chart.yaml
+++ b/charts/sscs-tribunals-api/Chart.yaml
@@ -84,14 +84,24 @@ dependencies:
     version: 0.0.29
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: wa.enabled
+#    initiation
   - name: wa-task-batch-service
     version: ~0.0.15
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
-    condition: wa.enabled
-#  - name: wa-task-batch-termination
-#    version: ~0.0.1
-#    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
-#    condition: wa-task-batch-termination.enabled
+    alias: wa-initiation-batch
+    condition: wa.taskBatchCron.enabled
+#    reconfiguration
+  - name: wa-task-batch-service
+    version: ~0.0.16
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    alias: wa-reconfiguration-batch
+    condition: wa.reconfigurationBatchCron.enabled
+#    termination
+  - name: wa-task-batch-service
+    version: ~0.0.16
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    alias: wa-termination-batch
+    condition: wa.terminationBatchCron.enabled
   - name: wa-message-cron-service
     version: ~0.0.3
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
